--- a/style.css
+++ b/style.css
@@ -83,6 +83,17 @@ main {
   backdrop-filter: blur(0);
 }
 
+.like::after {
+  content: "\2665";
+  font-size: 2rem;
+  line-height: 1;
+  position: absolute;
+  z-index: 3;
+  color: #f00;
+  top: 10px;
+  right: 10px;
+}
+
 @media (min-width: 768px) {
   main {
     grid-template-columns: repeat(3, 1fr);
